# cmake_template

./: .gitignore  README.md  build.bat  build.sh
Src/: CMakeLists.txt
Src/MyApp/: CMakeLists.txt  main.cpp  pch.h
Src/MyDynamicLibrary/: CMakeLists.txt  MyDynamicLib.cpp  MyDynamicLib.h  main.cpp
Src/MyStaticLibrary/:  MyLib.cpp  CMakeLists.txt  MyLib.h
